--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.13"
+    "@tailwindcss/vite": "^4.1.7",
+    "papaparse": "^5.5.3",
+    "vue": "^3.5.13",
+    "vue-organization-chart": "^1.1.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.7",
+    "tailwindcss-cli": "^0.1.2",
     "vite": "^6.3.5"
   }
 }
