--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/cli": "^4.1.7",
     "@tailwindcss/vite": "^4.1.7",
+    "echarts": "^5.6.0",
     "papaparse": "^5.5.3",
     "vue": "^3.5.13",
     "vue-organization-chart": "^1.1.6"
